tests/samples/invalid/member_of_int_literal.pn
fn foo() -> i32
{
	var x = 17i32.nonsense;
	return: 400
}
